# viparse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/rules/: code-style.md  commit-title.md  review-before-push.md
.claude/skills/add-encoding/: SKILL.md
.claude/skills/add-engine/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docs/examples/: README.md  rag_pipeline.py
docs/ops/: linear-github-mapping.md
docs/research/: diacritic-restoration.md
docs/specs/: README.md  SPEC-0-foundation-ops.md  SPEC-1-core-architecture.md  SPEC-2-extraction-engines.md  SPEC-3-vietnamese-normalization.md  SPEC-4-rag-output.md  SPEC-5-api-cli-packaging.md  SPEC-6-testing-quality.md  SPEC-7-performance-scale.md  SPEC-8-security-supplychain.md
scripts/: check_nfc.py  dev.sh
src/viparse/: __init__.py  api.py  cache.py  chunk.py  cli.py  config.py  detect.py  errors.py  model.py  observability.py  options.py  pipeline.py  protocols.py  registry.py  safety.py
src/viparse/engines/: __init__.py  _shared.py  docx.py  legacy.py  ocr.py  pdf.py  rtf.py  xlsx.py
src/viparse/integrations/: __init__.py  _common.py  langchain.py  llamaindex.py
src/viparse/normalize/: __init__.py  cleanup.py  detector.py  encodings.py  frequency.py  normalizer.py  tables.py  tcvn3.py  viscii.py  vni.py  vps.py
src/viparse/structure/: __init__.py  renderer.py
tests/: conftest.py  test_api.py  test_cache.py  test_chunk.py  test_cli.py  test_config.py  test_detect.py  test_encoding_tables.py  test_engines_docx.py  test_engines_legacy.py  test_engines_ocr.py  test_engines_pdf.py  test_engines_rtf.py  test_engines_xlsx.py  test_errors.py  test_golden_snapshots.py  test_integrations.py  test_model.py  test_mvp_docx_normalize.py  test_normalize_cleanup.py  test_normalize_detector.py  test_normalize_frequency.py  test_normalize_tables.py  test_normalize_viscii.py  test_normalize_vps.py  test_normalizer.py  test_observability.py  test_packaging.py  test_pipeline.py  test_protocols.py  test_registry.py  test_safety.py  test_smoke.py  test_structure_renderer.py
tests/auditai/: README.md  auditai.yml  dataset.json  mock_adapter.py  sample-report.md  workflow-auditai.yml.example
tests/golden/: docx_basic.json  docx_basic.md  docx_legacy.json  docx_legacy.md  pdf_basic.json  pdf_basic.md  xlsx_basic.json  xlsx_basic.md
