[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viparse"
dynamic = ["version"]
description = "Vietnamese-first document loader for RAG"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "minhtridinh" }]
keywords = ["vietnamese", "rag", "document", "parser", "tcvn3", "vni", "nfc"]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "build"]

[project.urls]
Repository = "https://github.com/minhtridinh/viparse"

[tool.hatch.version]
path = "src/viparse/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/viparse"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["viparse"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
