[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viparse"
dynamic = ["version"]
description = "Vietnamese-first document loader for RAG"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "minhtridinh" }]
keywords = ["vietnamese", "rag", "document", "parser", "tcvn3", "vni", "nfc"]
dependencies = []

# Heavy engines live behind extras so the default (`core`) install stays light —
# `pip install viparse` pulls no parser/OCR binaries. `all` is the union of them.
[project.optional-dependencies]
office = ["python-docx>=1.1,<2", "openpyxl>=3.1,<4"]
pdf = ["pdfplumber>=0.11,<0.12"]
ocr = ["pytesseract>=0.3,<0.4", "pdf2image>=1.17,<2", "pillow>=10,<12"]
all = ["viparse[office,pdf,ocr]"]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "build", "reportlab>=4,<5"]

[project.scripts]
viparse = "viparse.cli:main"

[project.urls]
Repository = "https://github.com/minhtridinh/viparse"

[tool.hatch.version]
path = "src/viparse/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/viparse"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# These libraries ship no type stubs (unlike python-docx); the adapters treat them as Any.
[[tool.mypy.overrides]]
module = ["openpyxl.*", "pdfplumber.*", "pytesseract.*", "pdf2image.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["viparse"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
